--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,11 +5,11 @@ services:
     container_name: postgres-nest
     image: postgres:14.0-alpine
     environment:
-      - POSTGRES_USER=${TYPEORM_USERNAME}
-      - POSTGRES_PASSWORD=${TYPEORM_PASSWORD}
-      - POSTGRES_DB=${TYPEORM_DATABASE}
+      - POSTGRES_USER=$TYPEORM_USERNAME
+      - POSTGRES_PASSWORD=$TYPEORM_PASSWORD
+      - POSTGRES_DB=$TYPEORM_DATABASE
     volumes:
       - ./pgdata:/var/lib/postgresql/data
     ports:
-      - ${PG_PORT}:5433
+      - $POSTGRES_PORT:5432
     restart: always
