--- a/.env
+++ b/.env
@@ -1,7 +1,6 @@
 PORT                            = 4000
 
 TYPEORM_CONNECTION              = postgres
-TYPEORM_HOST                    = postgres
 TYPEORM_USERNAME                = postgres
 TYPEORM_PASSWORD                = root
 TYPEORM_DATABASE                = nest
@@ -11,3 +10,6 @@ TYPEORM_MIGRATIONS              = dist/migrations/*.js
 TYPEORM_MIGRATIONS_DIR          = src/migrations
 TYPEORM_MIGRATIONS_RUN          = false
 TYPEORM_MIGRATIONS_TABLE_NAME   = migrations
+
+LOCAL_HOST                      = localhost
+DOCKER_HOST                     = postgres
